saving questions to the database